Created analysis/request ui. Implemented Login, Logout, Session and Sign up.

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
 <body>
   <div class="fixed-bottom fixed-top bg">
     <main>
-      <component v-bind:is="curr_page"></component>
+        <component v-bind:is="curr_page"></component>
+      </div>
     </main>
   </div>
 </body>
