Added most of HAR import functionality

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,6 @@
   <div class="fixed-bottom fixed-top bg">
     <main>
         <component v-bind:is="curr_page"></component>
-      </div>
     </main>
   </div>
 </body>
@@ -26,5 +25,6 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="../assets/lib/Chart.roundedBarCharts.js"></script>
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+<script src="../assets/lib/oboe-browser.js"></script>
 <script src="index.js" type="module" charset="utf-8"></script>
 </html>
