Added heatmap library, partly implemented map functionality, connected overview chart to db + small fixes

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="../assets/lib/Chart.roundedBarCharts.js"></script>
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+<script src="../assets/lib/heatmap.min.js"></script>
+<script src="../assets/lib/leaflet-heatmap.js"></script>
 <script src="../assets/lib/oboe-browser.js"></script>
 <script src="index.js" type="module" charset="utf-8"></script>
 </html>
